fix width, nowrap

--- a/css/resume.css
+++ b/css/resume.css
@@ -28,7 +28,7 @@ p {
 }
 
 #cv {
-	width: 90%;
+	width: 800px;
 	max-width: 800px;
 	background: #f3f3f3;
 	margin: 10px auto; /* 10px: top black color; auto: in center */
